--- a/portable.config
+++ b/portable.config
@@ -60,8 +60,8 @@
       <Bluegrams.Application.CustomSettings>
         <Width>NaN</Width>
         <Height>NaN</Height>
-        <Left>509.33333333333331</Left>
-        <Top>196</Top>
+        <Left>646.66666666666663</Left>
+        <Top>246.66666666666666</Top>
         <WindowState>Normal</WindowState>
       </Bluegrams.Application.CustomSettings>
     </PC_DESKTOP-K54QTG2>
